tests/ui/errors/snapshots/parse_use_instead_of_import.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:1]
 1 │ 
 2 │ use fmt
   · ─┬─
   ·  ╰── unexpected syntax for import
   ╰────
  help: Use `import` instead of `use` for imports: `import "package/path"` · code: [parse.use_unsupported]
